Fixed header overflow issue on mobile

--- a/style/header.scss
+++ b/style/header.scss
@@ -47,3 +47,11 @@
 		}
 	}
 }
+
+@media(max-width: 380px){
+	.header{
+		h2{
+			font-size: 13px;
+		}
+	}
+}
